# dezhou_20260508

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  leduc_mccfr.py  rust-toolchain.toml  slumbot_hands_20260529_1.jsonl
.github/workflows/: ci.yml  nightly.yml
artifacts/: features_flop.bin.b3sum  features_river.bin.b3sum  features_turn.bin.b3sum  ochs_warmup_16.json  ochs_warmup_16.json.b3sum  ochs_warmup_8.json  ochs_warmup_8.json.b3sum  ochs_warmup_postflop_16_n1000.json  ochs_warmup_postflop_16_n1000.json.b3sum  ochs_warmup_postflop_16_n10000.json  ochs_warmup_postflop_16_n10000.json.b3sum  ochs_warmup_postflop_8_n1000.json  ochs_warmup_postflop_8_n1000.json.b3sum  ochs_warmup_postflop_8_n10000.json  ochs_warmup_postflop_8_n10000.json.b3sum
benches/: baseline.rs  stage3.rs  stage4.rs
docs/: aivat_eval.md  bucket_feature_design.md  es_mccfr_update_explainer.html  h3_500m_checkpoint_investigation.md  heads_up_nlhe_solver_target.md  invariants.md  nlhe_infoset_betting_history_abstraction_research.md  nlhe_infoset_history_investigation.md  pluribus_explained.html  pluribus_path.md  pluribus_stage1_api.md  pluribus_stage1_decisions.md  pluribus_stage1_report.md  pluribus_stage1_validation.md  pluribus_stage1_workflow.md  pluribus_stage2_api.md  pluribus_stage2_bucket_quality.md  pluribus_stage2_bucket_quality_v2_test_report.md  pluribus_stage2_bucket_quality_v3_test_report.md  pluribus_stage2_decisions.md  pluribus_stage2_external_compare.json  pluribus_stage2_external_compare.md  pluribus_stage2_report.md  pluribus_stage2_validation.md  pluribus_stage2_workflow.md  pluribus_stage3_api.md  pluribus_stage3_d361_flamegraph_findings.md  pluribus_stage3_decisions.md  pluribus_stage3_external_compare.md  pluribus_stage3_report.md  pluribus_stage3_validation.md  pluribus_stage3_workflow.md  pluribus_stage4_api.md  pluribus_stage4_decisions.md  pluribus_stage4_external_compare.md  pluribus_stage4_profiling.md  pluribus_stage4_report.md  pluribus_stage4_validation.md  pluribus_stage4_workflow.md  pluribus_stage5_api.md  (+9 more)
docs/temp/: a2_infoset_key_fields_2026_05_31.md  a3xa4_wiring_design_2026_06_01.md  approach_exploration_dabaihua_2026_06_09.md  betting_history_abstraction_options_2026_05_31.md  betting_history_abstraction_research_2026_05_31.md  bucket_v3_stage2_state_2026_05_22.md  direct_combinatorial_rank_plan_2026_05_26.md  exploit_postflop_af_design_2026_06_21.md  exploit_strategy_design_2026_06_14.md  flop_search_convergence_q8h_2026_06_18.md  nlhe_dense_infoset_table_plan_2026_05_26.md  nlhe_dense_parallel_merge_alternatives_2026_05_28.md  openpoker_client_design_2026_06_02.md  pluribus_path.md  realtime_search_design_2026_06_03.md  realtime_search_openpoker_exec_2026_06_08.md  river_search_convergence_2026_06_17.md  sb_rfi_preopen_1b_2b_2026_06_02.md  search_convergence_a3hh_2026_06_15.md  slumbot_api_bridge_plan_2026_05_29.md  training_throughput_batched_parallel_2026_05_24.md  turn_blueprint_trim_cross_street_anchored_2026_06_19.md  turn_search_convergence_4hJh_2026_06_16.md  turn_search_convergence_ac4c_2026_06_18.md  turn_search_convergence_qj_2026_06_17.md  unanchored_range_design_2026_06_10.md  v3_500m_training_state_2026_05_24.md
examples/: bucket_lookup_hands.rs  nlhe_preflop_nodes_dump.rs  turn_equity_review.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: abstraction_smoke.rs  history_decode.rs  random_play.rs
proto/: hand_history.proto
scripts/: capture-arch-hashes.sh  capture-checkpoint-hashes.sh  conv_diag_10b.py  deploy-aws-training.sh  rsync-bucket-to-vultr.sh  run-cross-validation-100k.sh  setup-rust.sh
src/: error.rs  eval.rs  history.rs  lib.rs
src/abstraction/: action.rs  action_pluribus.rs  bucket_table.rs  canonical_enum.rs  cluster.rs  equity.rs  feature.rs  info.rs  mod.rs  postflop.rs  preflop.rs
src/core/: mod.rs  rng.rs
src/rules/: action.rs  config.rs  mod.rs  state.rs
src/training/: aivat.rs  aivat_multiway.rs  aivat_nlhe.rs  aivat_value.rs  baseline_eval.rs  best_response.rs  blueprint_advisor.rs  checkpoint.rs  game.rs  kuhn.rs  lbr.rs  leduc.rs  metrics.rs  mod.rs  monitor.rs  nlhe.rs  nlhe_6max.rs  nlhe_betting_tree.rs  nlhe_dense.rs  nlhe_dense_checkpoint.rs  (+15 more)
tests/: abstraction_fuzz.rs  action_abstraction.rs  action_pluribus_abstraction_trait.rs  aivat_multiway_runout.rs  aivat_multiway_selfplay.rs  aivat_nlhe_runout.rs  aivat_nlhe_selfplay.rs  api_signatures.rs  baseline_eval.rs  bucket_quality.rs  bucket_table_corruption.rs  bucket_table_schema_compat.rs  canonical_observation.rs  cfr_fuzz.rs  cfr_kuhn.rs  cfr_leduc.rs  cfr_simplified_nlhe.rs  checkpoint_corruption.rs  checkpoint_round_trip.rs  checkpoint_v2_round_trip.rs  checkpoint_v2_schema.rs  checkpoint_v3_round_trip.rs  clustering_cross_host.rs  clustering_determinism.rs  cross_arch_hash.rs  cross_eval.rs  cross_host_blake3.rs  cross_lang_history.rs  cross_validation.rs  dense_nlhe_trainer.rs  dense_nlhe_trainer_lockfree.rs  determinism.rs  e2_rev1_profile.rs  equity_calculator_lookup.rs  equity_combos.rs  equity_features.rs  equity_hist_river_exact.rs  equity_ochs_combo.rs  equity_self_consistency.rs  evaluator.rs  (+31 more)
tools/: aivat_build_values.rs  aivat_eval.rs  b3sum.rs  bucket_features_dump.rs  bucket_kmeans_fit.rs  bucket_quality_dump.rs  bucket_quality_report.py  bucket_table_reader.py  bucket_table_reindex_v3_to_v4.rs  bucket_table_seed_compare.py  checkpoint_reader.py  dump_preflop_strategy.rs  eval_blueprint.rs  external_cfr_compare.py  external_compare.py  fetch_bucket_table.sh  history_reader.py  lbr_compute.rs  leduc_es_mccfr_report.rs  leduc_lbr_report.rs  mccfr_trace.rs  mccfr_trace_template.html  multiway_equity_probe.rs  multiway_hist_ari.rs  nlhe_betting_tree_sizing.rs  nlhe_blake3_anchor.rs  nlhe_checkpoint_vs_checkpoint.rs  nlhe_dense_preflop_169_dump.rs  nlhe_dense_zero_strategy_count.rs  nlhe_h3_report.rs  nlhe_infoset_signal_dump.rs  nlhe_preflop_strategy_dump.rs  nlhe_trace.rs  nlhe_zero_strategy_audit.rs  ochs_warmup_dump.rs  openpoker_advisor.rs  openpoker_hh_aivat.rs  openpoker_play.py  perf_baseline.rs  pokerkit_eval.py  (+15 more)
(+6 files in other folders)
