[package]
name = "poker"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "6-max NLHE poker AI — Pluribus-style stage 1 (rules + evaluator)."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# rand 在 RngCoreAdapter 中作为公开依赖暴露，pin minor 版本（L-4 评审）。
# Cargo `^0.8` 语义 = `>=0.8.0, <0.9.0`，已锁定 minor；patch 浮动靠 Cargo.lock 固化。
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
prost = "0.13"
blake3 = "1.5"
# 阶段 2 D-255：mmap 加载 bucket table（C2 落地真实加载路径，A1 仅声明依赖）。
memmap2 = "0.9"

# B1 测试 / harness 专用依赖。仅 tests/ 与 benches/ 引用，不进入产品二进制。
[dev-dependencies]
# 阶段 1 §B1 / E1 benchmark harness。`harness = false` 见下方 [[bench]]。
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1.0"
# C1 跨语言反序列化测试：把 prost 输出 base64 后传给 Python 子进程。
base64 = "0.22"

# 本地 cargo clippy / rustdoc 与 CI -D warnings 等级对齐（A1 评审 P1）。
[lints.rust]
# 阶段 1 整路径禁用 unsafe（D-026 / D-027 防御）。
unsafe_code = "forbid"

[lints.rustdoc]
# rustdoc intra-doc link 漂移直接 reject，避免 cargo doc 静默吞掉断链。
broken_intra_doc_links = "deny"

# B1 占位 benchmark：评估器单次调用 + 单手模拟。E1 才接入 SLO 断言。
[[bench]]
name = "baseline"
harness = false
