[package]
name = "poker"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "6-max NLHE poker AI — Pluribus-style stage 1 (rules + evaluator)."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# rand 在 RngCoreAdapter 中作为公开依赖暴露，pin minor 版本（L-4 评审）。
# Cargo `^0.8` 语义 = `>=0.8.0, <0.9.0`，已锁定 minor；patch 浮动靠 Cargo.lock 固化。
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
prost = "0.13"
blake3 = "1.5"
# 阶段 2 D-255：mmap 加载 bucket table。C2 走 std::fs::read 整段加载替代 mmap
# （Mmap::map 入口 unsafe 与 stage 1 D-275 unsafe_code = "forbid" 冲突，详见
# pluribus_stage2_workflow.md §C-rev1 batch 2）。stage 3+ 巨大 bucket table 跨
# 进程共享必需时由 D-275-revM 评估，届时再加 memmap2 依赖。

# B1 测试 / harness 专用依赖。仅 tests/ 与 benches/ 引用，不进入产品二进制。
[dev-dependencies]
# 阶段 1 §B1 / E1 benchmark harness。`harness = false` 见下方 [[bench]]。
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1.0"
# C1 跨语言反序列化测试：把 prost 输出 base64 后传给 Python 子进程。
base64 = "0.22"

# 本地 cargo clippy / rustdoc 与 CI -D warnings 等级对齐（A1 评审 P1）。
[lints.rust]
# 阶段 1 整路径禁用 unsafe（D-026 / D-027 防御）。
unsafe_code = "forbid"

[lints.rustdoc]
# rustdoc intra-doc link 漂移直接 reject，避免 cargo doc 静默吞掉断链。
broken_intra_doc_links = "deny"

# B1 占位 benchmark：评估器单次调用 + 单手模拟。E1 才接入 SLO 断言。
[[bench]]
name = "baseline"
harness = false

# C2：bucket table 训练 CLI（API §5）。从 RngSource seed → equity Monte Carlo →
# k-means clustering → 写出 mmap artifact。`tools/train_bucket_table.rs` 入口。
[[bin]]
name = "train_bucket_table"
path = "tools/train_bucket_table.rs"
