[package]
name = "poker"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "6-max NLHE poker AI — Pluribus-style stage 1 (rules + evaluator)."
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# rand 在 RngCoreAdapter 中作为公开依赖暴露，pin minor 版本（L-4 评审）。
# Cargo `^0.8` 语义 = `>=0.8.0, <0.9.0`，已锁定 minor；patch 浮动靠 Cargo.lock 固化。
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"
prost = "0.13"
blake3 = "1.5"
# §G-batch1 §3.4-batch1.5 [实现]：data parallelism for production bucket table
# 训练（`train_one_street` phase 1 features + phase 2 enumerate-assign 热循环）。
# rayon 0.x → 1.x 系列稳定 API，按 minor 锁定。determinism 保证：每 iteration 的
# RNG 通过 derive_substream_seed(seed, op, i) 派生（pure function of i），par_iter
# `.collect()` 顺序与 `.iter().collect()` 一致 → byte-equal artifact 不变量保持。
rayon = "1.10"
# 阶段 2 D-255：mmap 加载 bucket table。C2 走 std::fs::read 整段加载替代 mmap
# （Mmap::map 入口 unsafe 与 stage 1 D-275 unsafe_code = "forbid" 冲突，详见
# pluribus_stage2_workflow.md §C-rev1 batch 2）。stage 3+ 巨大 bucket table 跨
# 进程共享必需时由 D-275-revM 评估，届时再加 memmap2 依赖。

# 阶段 3 D-373 新增依赖。
# bincode 1.x：Checkpoint regret_table / strategy_sum 序列化（D-327 / D-354 LE
# 默认）。
bincode = "1.3"
# tempfile 3.x：Checkpoint save 走 write-to-temp + atomic rename（D-353）。
tempfile = "3"
# serde + derive：D-327 InfoSet / 累积向量经 bincode 序列化的 derive 入口。dev-
# dependencies 已经间接拉入 serde（via serde_json），但产品代码引用必须显式声明，
# 否则 cargo doc / clippy 在 stage 3 D2 \[实现\] 落地后报 missing trait。
serde = { version = "1", features = ["derive"] }
# Thread-safety crate（D-321 多线程 ES-MCCFR thread-safety 模型）：候选
# parking_lot 0.12 / dashmap 5.5 / crossbeam 0.8。具体选型 deferred 到 C2 \[实现\]
# 起步前 lock（详见 docs/pluribus_stage3_decisions.md §10 已知未决项 + D-321），
# A1 \[实现\] scaffold 阶段不预提交，避免后续 batch 调整时依赖漂移。

# B1 测试 / harness 专用依赖。仅 tests/ 与 benches/ 引用，不进入产品二进制。
[dev-dependencies]
# 阶段 1 §B1 / E1 benchmark harness。`harness = false` 见下方 [[bench]]。
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1.0"
# C1 跨语言反序列化测试：把 prost 输出 base64 后传给 Python 子进程。
base64 = "0.22"

# 本地 cargo clippy / rustdoc 与 CI -D warnings 等级对齐（A1 评审 P1）。
[lints.rust]
# 阶段 1 整路径禁用 unsafe（D-026 / D-027 防御）。
unsafe_code = "forbid"

[lints.rustdoc]
# rustdoc intra-doc link 漂移直接 reject，避免 cargo doc 静默吞掉断链。
broken_intra_doc_links = "deny"

# B1 占位 benchmark：评估器单次调用 + 单手模拟。E1 才接入 SLO 断言。
[[bench]]
name = "baseline"
harness = false

# 阶段 3 B1 \[测试\] D-367：CFR / MCCFR 训练 throughput bench framework
# （2 group：stage3/kuhn_cfr_iter + stage3/leduc_cfr_iter）。C1 \[测试\] 补充
# stage3/nlhe_es_mccfr_update 第 3 组。E1 \[测试\] 落地 tests/perf_slo.rs::stage3_*
# 才做严格 fail/pass SLO 断言（D-369）。
[[bench]]
name = "stage3"
harness = false

# C2：bucket table 训练 CLI（API §5）。从 RngSource seed → equity Monte Carlo →
# k-means clustering → 写出 mmap artifact。`tools/train_bucket_table.rs` 入口。
[[bin]]
name = "train_bucket_table"
path = "tools/train_bucket_table.rs"

# F3 [报告]：bucket table 质量数据 dump CLI（一次性 instrumentation）。读取 artifact
# + 抽样 EHS 计算 → JSON 喂给 tools/bucket_quality_report.py 输出验收直方图。
[[bin]]
name = "bucket_quality_dump"
path = "tools/bucket_quality_dump.rs"

# 阶段 3 D-372 / API-370：CFR / MCCFR 训练 CLI。`--game {kuhn,leduc,nlhe} --trainer
# {vanilla,es-mccfr} --iter N --seed S --checkpoint-dir DIR` 等 flag 锁在
# `docs/pluribus_stage3_api.md` API-370。A1 \[实现\] 阶段 main body 走 stub；
# B2/C2/D2 \[实现\] 逐步落地具体 dispatch。
[[bin]]
name = "train_cfr"
path = "tools/train_cfr.rs"
